--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -9,8 +9,8 @@ jobs:
 #      max-parallel: 1 # Sets the limit of jobs to run concurrently
       fail-fast: true
       matrix:
-        os: [ubuntu-20.04-arm]
-        compiler: [g++-7, g++-8, g++-9, g++-10, clang++-8, clang++-9, clang++-10]
+        os: [ubuntu-22.04-arm]
+        compiler: [g++-9, g++-10, clang++-9, clang++-10]
 
     runs-on: ${{ matrix.os }}
 
