try to find out what went wrong here

--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -285,7 +285,7 @@ jobs:
       shell: pwsh
       run: |
         cd build
-        cmake --build . -j2
+        VERBOSE=1 cmake --build . -j2
     - name: Copy Hwloc DLL
       shell: pwsh
       if: matrix.cfg.MSVC == true
