--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -10,7 +10,7 @@ jobs:
       fail-fast: true
       matrix:
         os: [ubuntu-22.04]
-        compiler: [g++-10]
+        compiler: [g++-7, g++-8, g++-9, g++-10, clang++-8, clang++-9, clang++-10]
         HIP: ['6.2']
     runs-on: ${{ matrix.os }}
 
@@ -66,14 +66,26 @@ jobs:
       run: |
         cd build
         make -j2
+    - name: Strip binary (HIP)
+      if: matrix.CUDA == '0' && matrix.HIP != '0' && matrix.ONEAPI == '0'
+      run: |
+        cd build
+        strip src/FIRESTARTER_HIP
+    - uses: actions/upload-artifact@v4
+      if: matrix.compiler == 'clang++-10' && matrix.HIP != '0' && matrix.CUDA == '0' && matrix.ONEAPI == '0' && ( github.event_name == 'push' && startsWith(github.ref, 'refs/tags/') || github.event_name == 'pull_request' )
+      with:
+        name: FIRESTARTER_HIP_${{ matrix.HIP }}-linux
+        retention-days: 1
+        path: build/src/FIRESTARTER_HIP
   build-linux:
     strategy:
 #      max-parallel: 1 # Sets the limit of jobs to run concurrently
       fail-fast: true
       matrix:
         os: [ubuntu-20.04]
-        compiler: [g++-10]
-        CUDA: ['11.0']
+        compiler: [g++-7, g++-8, g++-9, g++-10, clang++-8, clang++-9, clang++-10]
+        CUDA: ['0', '8.0', '11.0', 'NVHPC-22.5']
+        ONEAPI: ['0', '2023.2.0', '2024.0']
 
     runs-on: ${{ matrix.os }}
 
@@ -285,3 +297,295 @@ jobs:
       run: |
         sudo apt remove intel-basekit-${{ matrix.ONEAPI }}
         sudo apt autoremove
+  build-windows:
+    strategy:
+      fail-fast: false
+      matrix:
+        os: [windows-2019]
+        cfg:
+          - { CUDA: '0', ONEAPI: '0', MSVC: true }
+          - { CUDA: '0', ONEAPI: '0', MSVC: false }
+          - { CUDA: '11.0', MSVC: true }
+
+    runs-on: ${{ matrix.os }}
+
+    steps:
+    - uses: actions/checkout@v4
+      with:
+        fetch-depth: '0'
+    - name: Install CMake
+      uses: crazy-max/ghaction-chocolatey@v3
+      with:
+        args: install cmake
+    - name: Install Mingw
+      uses: crazy-max/ghaction-chocolatey@v3
+      if: matrix.cfg.MSVC == false
+      with:
+        args: install mingw
+    - name: Install CUDA Toolkit
+      if: matrix.cfg.CUDA == '11.0'
+      shell: pwsh
+      run: |
+        Set-ExecutionPolicy unrestricted
+        & '.github\\install-cuda.ps1' -Version '11.0'
+    - uses: ilammy/msvc-dev-cmd@v1
+      if: matrix.cfg.MSVC == true
+    - name: Create build directory
+      shell: pwsh
+      run: |
+        mkdir build
+    - name: Run CMake configure
+      if: matrix.cfg.CUDA == '0' && matrix.cfg.MSVC == false
+      shell: pwsh
+      run: |
+        cd build
+        cmake -G "MinGW Makefiles" ..
+    - name: Run CMake configure
+      if: matrix.cfg.CUDA == '0' && matrix.cfg.MSVC == true
+      shell: pwsh
+      run: |
+        cd build
+        cmake -G "NMake Makefiles" ..
+    - name: Run CMake configure
+      if: matrix.cfg.CUDA != '0'
+      shell: pwsh
+      run: |
+        cd build
+        ls 
+        dir "C:\Program Files\NVIDIA GPU Computing Toolkit\CUDA\v11.0"
+        cmake -G "NMake Makefiles" -DFIRESTARTER_BUILD_TYPE="FIRESTARTER_CUDA" -DCUDAToolkit_ROOT="C:\\Program Files\\NVIDIA GPU Computing Toolkit\\CUDA\\v11.0" ..
+    - name: Build
+      shell: pwsh
+      run: |
+        cd build
+        cmake --build . -j2
+    - name: Copy Hwloc DLL
+      shell: pwsh
+      if: matrix.cfg.MSVC == true
+      run: |
+        cd build
+        cp ../lib/Hwloc/sources/contrib/windows/x64/Release/libhwloc-15.dll src
+    - name: Strip binary
+      if: matrix.cfg.CUDA == '0' && matrix.cfg.MSVC == false
+      run: |
+        cd build
+        strip src\FIRESTARTER.exe
+    - name: Test FIRESTARTER
+      if: matrix.cfg.CUDA == '0'
+      shell: pwsh
+      run: .\build\src\FIRESTARTER.exe -t 1
+    - uses: actions/upload-artifact@v4
+      if: matrix.cfg.CUDA == '0' && matrix.cfg.MSVC == true && ( github.event_name == 'push' && startsWith(github.ref, 'refs/tags/') || github.event_name == 'pull_request' )
+      with:
+        name: FIRESTARTER-windows
+        retention-days: 1
+        path: |
+          build\src\FIRESTARTER.exe
+          build\src\libhwloc-15.dll
+    - uses: actions/upload-artifact@v4
+      if: matrix.cfg.CUDA != '0' && ( github.event_name == 'push' && startsWith(github.ref, 'refs/tags/') || github.event_name == 'pull_request' )
+      with:
+        name: FIRESTARTER_CUDA_${{ matrix.cfg.CUDA }}-windows
+        retention-days: 1
+        path: |
+          build\src\FIRESTARTER_CUDA.exe
+          build\src\libhwloc-15.dll
+  build-macos:
+    strategy:
+      fail-fast: false
+      matrix:
+        os: [macos-12, macos-13]
+
+    runs-on: ${{ matrix.os }}
+
+    steps:
+    - uses: actions/checkout@v4
+      with:
+        fetch-depth: '0'
+    - name: Install Homebrew dependencies
+      run: |
+        brew upgrade cmake
+    - name: Create build directory
+      run: |
+        mkdir build
+    - name: Run CMake configure
+      run: |
+        cd build
+        cmake ..
+    - name: Build
+      run: |
+        cd build
+        make -j2
+    - name: Strip binary
+      run: |
+        cd build
+        strip src/FIRESTARTER
+    - name: Test FIRESTARTER
+      run: |
+        cd build
+        ./src/FIRESTARTER -t 1
+    - uses: actions/upload-artifact@v4
+      if: matrix.os == 'macos-12' && ( github.event_name == 'push' && startsWith(github.ref, 'refs/tags/') || github.event_name == 'pull_request' )
+      with:
+        retention-days: 1
+        name: FIRESTARTER-macOS_12
+        path: build/src/FIRESTARTER
+    - uses: actions/upload-artifact@v4
+      if: matrix.os == 'macos-13' && ( github.event_name == 'push' && startsWith(github.ref, 'refs/tags/') || github.event_name == 'pull_request' )
+      with:
+        retention-days: 1
+        name: FIRESTARTER-macOS_13
+        path: build/src/FIRESTARTER
+  create-download:
+    name: Create download for Website
+    runs-on: ubuntu-latest
+    if: github.event_name == 'push' && startsWith(github.ref, 'refs/tags/') || github.event_name == 'pull_request'
+    needs: [build-linux, build-macos, build-windows]
+    steps:
+    - uses: actions/checkout@v4
+      with:
+        fetch-depth: '0'
+        path: 'sources'
+    - name: Checkout submodules
+      run: |
+        cd sources
+        git submodule update --init --recursive
+    - name: Create Build directory
+      run: |
+        mkdir build
+    # Linux
+    - name: Retrieve FIRESTARTER-linux 
+      uses: actions/download-artifact@v4
+      with:
+        name: FIRESTARTER-linux
+        path: FIRESTARTER
+    - name: Move binary to right directory
+      run: |
+        mv FIRESTARTER/FIRESTARTER FIRESTARTER-linux
+        rm -rf FIRESTARTER
+        chmod +x FIRESTARTER-linux
+    # Linux CUDA 8.0
+    - name: Retrieve FIRESTARTER_CUDA_8.0-linux 
+      uses: actions/download-artifact@v4
+      with:
+        name: FIRESTARTER_CUDA_8.0-linux
+        path: FIRESTARTER
+    - name: Move binary to right directory
+      run: |
+        mv FIRESTARTER/FIRESTARTER_CUDA FIRESTARTER_CUDA_8.0
+        rm -rf FIRESTARTER
+        chmod +x FIRESTARTER_CUDA_8.0
+    # Linux CUDA 11.0
+    - name: Retrieve FIRESTARTER_CUDA_11.0-linux 
+      uses: actions/download-artifact@v4
+      with:
+        name: FIRESTARTER_CUDA_11.0-linux
+        path: FIRESTARTER
+    - name: Move binary to right directory
+      run: |
+        mv FIRESTARTER/FIRESTARTER_CUDA FIRESTARTER_CUDA_11.0
+        rm -rf FIRESTARTER
+        chmod +x FIRESTARTER_CUDA_11.0
+    # Linux CUDA HPC
+    - name: Retrieve FIRESTARTER_CUDA_NVHPC-22.5-linux 
+      uses: actions/download-artifact@v4
+      with:
+        name: FIRESTARTER_CUDA_NVHPC-22.5-linux
+        path: FIRESTARTER
+    - name: Move binary to right directory
+      run: |
+        mv FIRESTARTER/FIRESTARTER_CUDA FIRESTARTER_CUDA_NVHPC-22.5
+        rm -rf FIRESTARTER
+        chmod +x FIRESTARTER_CUDA_NVHPC-22.5
+    # Linux OneAPI
+    - name: Retrieve FIRESTARTER_ONEAPI_2024.0-linux 
+      uses: actions/download-artifact@v4
+      with:
+        name: FIRESTARTER_ONEAPI_2024.0-linux
+        path: FIRESTARTER
+    - name: Move binary to right directory
+      run: |
+        mv FIRESTARTER/FIRESTARTER_ONEAPI FIRESTARTER_ONEAPI_2024.0
+        rm -rf FIRESTARTER
+        chmod +x FIRESTARTER_ONEAPI_2024.0
+    - name: Retrieve FIRESTARTER_ONEAPI_2023.2.0-linux 
+      uses: actions/download-artifact@v4
+      with:
+        name: FIRESTARTER_ONEAPI_2023.2.0-linux
+        path: FIRESTARTER
+    - name: Move binary to right directory
+      run: |
+        mv FIRESTARTER/FIRESTARTER_ONEAPI FIRESTARTER_ONEAPI_2023.2.0
+        rm -rf FIRESTARTER
+        chmod +x FIRESTARTER_ONEAPI_2023.2.0
+    # Linux HIP 6.2
+    - name: Retrieve FIRESTARTER_HIP_6.2-linux 
+      uses: actions/download-artifact@v4
+      with:
+        name: FIRESTARTER_HIP_6.2-linux
+        path: FIRESTARTER
+    - name: Move binary to right directory
+      run: |
+        mv FIRESTARTER/FIRESTARTER_HIP FIRESTARTER_HIP_6.2
+        rm -rf FIRESTARTER
+        chmod +x FIRESTARTER_HIP_6.2
+    - name: Retrieve FIRESTARTER-macOS_12
+      uses: actions/download-artifact@v4
+      with:
+        name: FIRESTARTER-macOS_12
+        path: FIRESTARTER
+    - name: Move binary to right directory
+      run: |
+        mv FIRESTARTER/FIRESTARTER FIRESTARTER-macOS_12
+        rm -rf FIRESTARTER
+        chmod +x FIRESTARTER-macOS_12
+    - name: Retrieve FIRESTARTER-macOS_13
+      uses: actions/download-artifact@v4
+      with:
+        name: FIRESTARTER-macOS_13
+        path: FIRESTARTER
+    - name: Move binary to right directory
+      run: |
+        mv FIRESTARTER/FIRESTARTER FIRESTARTER-macOS_13
+        rm -rf FIRESTARTER
+        chmod +x FIRESTARTER-macOS_13
+    # Windows
+    - name: Retrieve FIRESTARTER-windows
+      uses: actions/download-artifact@v4
+      with:
+        name: FIRESTARTER-windows
+        path: FIRESTARTER
+    - name: Move binary to right directory
+      run: |
+        mv FIRESTARTER/FIRESTARTER.exe FIRESTARTER-windows.exe
+        mv FIRESTARTER/libhwloc-15.dll libhwloc-15.dll
+        rm -rf FIRESTARTER
+    # Windows CUDA
+    - name: Retrieve FIRESTARTER_CUDA_11.0-windows
+      uses: actions/download-artifact@v4
+      with:
+        name: FIRESTARTER_CUDA_11.0-windows
+        path: FIRESTARTER
+    - name: Move binary to right directory
+      run: |
+        mv FIRESTARTER/FIRESTARTER_CUDA.exe FIRESTARTER_CUDA_11.0-windows.exe
+        mv FIRESTARTER/libhwloc-15.dll libhwloc-15.dll
+        rm -rf FIRESTARTER
+    # Create tar.gz
+    - name: Copy CHANGELOG, README and LICENSE
+      run: |
+        grep -v '\$\$' < sources/CHANGELOG > CHANGELOG
+        cat sources/README.md | tail -n +3 > README.md
+        cp sources/LICENSE LICENSE
+        cp sources/3rd-party-licenses . -r
+        cp sources/examples . -r
+    - name: Create tar.gz
+      run: |
+        mv FIRESTARTER-linux FIRESTARTER
+        rm -rf sources/.git*
+        tar -cvzf FIRESTARTER.tar.gz CHANGELOG README.md LICENSE libhwloc-15.dll 3rd-party-licenses examples sources FIRESTARTER*
+    - uses: actions/upload-artifact@v4
+      with:
+        retention-days: 5
+        name: FIRESTARTER.tar.gz
+        path: FIRESTARTER.tar.gz
