--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -10,7 +10,7 @@ jobs:
       fail-fast: true
       matrix:
         os: [ubuntu-22.04]
-        compiler: [g++-7, g++-8, g++-9, g++-10, clang++-8, clang++-9, clang++-10]
+        compiler: [g++-9, g++-10, g++-11, g++-12, clang++-10, clang++-11, clang++-12, clang++-13, clang++-14, clang++-15]
         HIP: ['6.2']
     runs-on: ${{ matrix.os }}
 
@@ -32,7 +32,7 @@ jobs:
       with:
         fetch-depth: '0'
     - name: Install HIP runtime (if needed)
-      if: matrix.HIP != '0' && matrix.ONEAPI == 0 && matrix.VUDA == 0
+      if: matrix.HIP != '0' && matrix.ONEAPI == 0 && matrix.CUDA == 0
       run: |
         case ${{ matrix.HIP }} in
           6.2)
