remove some of the tests

--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -10,7 +10,7 @@ jobs:
       fail-fast: true
       matrix:
         os: [ubuntu-22.04]
-        compiler: [g++-9, g++-10, g++-11, g++-12, clang++-11, clang++-12, clang++-13, clang++-14, clang++-15]
+        compiler: [g++-9] #, g++-10, g++-11, g++-12, clang++-11, clang++-12, clang++-13, clang++-14, clang++-15]
         HIP: ['6.2']
     runs-on: ${{ matrix.os }}
 
@@ -118,9 +118,9 @@ jobs:
       fail-fast: true
       matrix:
         os: [ubuntu-20.04]
-        compiler: [g++-7, g++-8, g++-9, g++-10, clang++-8, clang++-9, clang++-10]
-        CUDA: ['0', '8.0', '11.0', 'NVHPC-22.5']
-        ONEAPI: ['0', '2023.2.0', '2024.0']
+        compiler: [g++-7] #, g++-8, g++-9, g++-10, clang++-8, clang++-9, clang++-10]
+        CUDA: ['0', '8.0'] #, '11.0', 'NVHPC-22.5']
+        ONEAPI: ['0', '2023.2.0'] #, '2024.0']
 
     runs-on: ${{ matrix.os }}
 
