--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,8 @@
 cmake_minimum_required(VERSION 3.22)
 project(FIRESTARTER)
 
+set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
+
 include(cmake/GitSubmoduleUpdate.cmake)
 
 # set FIRESTARTER version
