better option passing

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,29 +9,45 @@ if(Git_FOUND)
 	_is_git(${CMAKE_CURRENT_SOURCE_DIR} IN_GIT)
 endif()
 
-if (IN_GIT)
-	execute_process(COMMAND ${GIT_EXECUTABLE} describe --always --tags --dirty
-		WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}
-		OUTPUT_VARIABLE _FIRESTARTER_VERSION_STRING
-		)
-	string(STRIP ${_FIRESTARTER_VERSION_STRING} _FIRESTARTER_VERSION_STRING)
+SET (_FIRESTARTER_VERSION_TEMPERED OFF)
+
+SET(_FIRESTARTER_VERSION_STRING "default" CACHE STRING "_FIRESTARTER_VERSION_STRING should not be used if you do not know what to do.")
+if("${_FIRESTARTER_VERSION_STRING}" STREQUAL "default")
+	if (IN_GIT)
+		execute_process(COMMAND ${GIT_EXECUTABLE} describe --always --tags --dirty
+			WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}
+			OUTPUT_VARIABLE _FIRESTARTER_VERSION_STRING
+			)
+		string(STRIP ${_FIRESTARTER_VERSION_STRING} _FIRESTARTER_VERSION_STRING)
+	else()
+		message(AUTHOR_WARNING "Cannot detect FIRESTARTER version.")
+		SET(_FIRESTARTER_VERSION_STRING "unknown")
+	endif()
 else()
-	message(AUTHOR_WARNING "Cannot detect FIRESTARTER version.")
-	set(_FIRESTARTER_VERSION_STRING "unknown")
+	SET (_FIRESTARTER_VERSION_TEMPERED ON)
 endif()
 add_compile_definitions(_FIRESTARTER_VERSION_STRING="${_FIRESTARTER_VERSION_STRING}")
 
-if(IN_GIT)
-	execute_process(COMMAND ${GIT_EXECUTABLE} show -s --format=%ci HEAD
-		WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}
-		OUTPUT_VARIABLE _FIRESTARTER_BUILD_YEAR
-		)
-	string(SUBSTRING ${_FIRESTARTER_BUILD_YEAR} 0 4 _FIRESTARTER_BUILD_YEAR)
+SET(_FIRESTARTER_BUILD_YEAR "default" CACHE STRING "_FIRESTARTER_BUILD_YEAR should not be used if you do not know what to do.")
+if("${_FIRESTARTER_BUILD_YEAR}" STREQUAL "default")
+	if(IN_GIT)
+		execute_process(COMMAND ${GIT_EXECUTABLE} show -s --format=%ci HEAD
+			WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}
+			OUTPUT_VARIABLE _FIRESTARTER_BUILD_YEAR
+			)
+		string(SUBSTRING ${_FIRESTARTER_BUILD_YEAR} 0 4 _FIRESTARTER_BUILD_YEAR)
+	else()
+		message(AUTHOR_WARNING "Cannot detect FIRESTARTER build year.")
+		SET(_FIRESTARTER_BUILD_YEAR "unknown")
+	endif()
 else()
-	message(AUTHOR_WARNING "Cannot detect FIRESTARTER build year.")
-	set(_FIRESTARTER_BUILD_YEAR "unknown")
+	SET (_FIRESTARTER_VERSION_TEMPERED ON)
 endif()
 add_compile_definitions(_FIRESTARTER_BUILD_YEAR="${_FIRESTARTER_BUILD_YEAR}")
+
+if(_FIRESTARTER_VERSION_TEMPERED)
+	add_compile_definitions(_FIRESTARTER_VERSION_TEMPERED)
+endif()
 
 # init git submodules
 include(cmake/GitSubmoduleUpdate.cmake)
