--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -41,12 +41,11 @@ if(CMAKE_SYSTEM_NAME STREQUAL "Linux")
 		)
 endif()
 
-if("${FIRESTARTER_TRACING}" STREQUAL "None")
-	SET(FIRESTARTER_FILES 
-		${FIRESTARTER_FILES}
-		firestarter/Tracing/NoTracing.cpp
-	)
-elseif("${FIRESTARTER_TRACING}" STREQUAL "Logger")
+if(NOT "${FIRESTARTER_TRACING}" STREQUAL "None")
+	SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -DFIRESTARTER_TRACING")
+endif()
+
+if("${FIRESTARTER_TRACING}" STREQUAL "Logger")
 	SET(FIRESTARTER_FILES 
 		${FIRESTARTER_FILES}
 		firestarter/Tracing/LogTracing.cpp
@@ -65,6 +64,13 @@ elseif("${FIRESTARTER_TRACING}" STREQUAL "VampirTrace")
 	)
 	#todo find folder
 	SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -DVTRACE ${FIRESTARTER_TRACING_CXXFLAGS}")
+elseif("${FIRESTARTER_TRACING}" STREQUAL "Caliper")
+	SET(FIRESTARTER_FILES 
+		${FIRESTARTER_FILES}
+		firestarter/Tracing/Caliper.cpp
+	)
+	#todo find folder
+	SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${FIRESTARTER_TRACING_CXXFLAGS}")
 endif()
 
 
