--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -73,7 +73,8 @@ jobs:
           6.2)
             wget https://repo.radeon.com/amdgpu-install/6.2/ubuntu/jammy/amdgpu-install_6.2.60200-1_all.deb
             sudo apt install ./amdgpu-install_6.2.60200-1_all.deb
-            sudo amdgpu-install -y --usecase=hiplibsdk,rocm --no-dkms
+            sudo amdgpu-install -y --usecase=hiplibsdk --no-dkms
+            rm ./amdgpu-install_6.2.60200-1_all.deb
             ;;
         esac
 
